# lean-tui

./: .gitignore  .harper-dictionary.txt  CLAUDE.md  Cargo.toml  PLAN.md  README.md  clippy.toml  flake.nix  lake-manifest.json  lakefile.lean  test.lean  test_long.lean
.helix/: languages.toml
src/: cursor.rs  error.rs  main.rs  proxy.rs  tui.rs
src/lake_ipc/: goal_fetcher.rs  mod.rs  rpc_client.rs
src/lake_lsp_proxy/: cursor_extractor.rs  forward.rs  goal_fetcher.rs  intercept.rs  mod.rs  proxy.rs
src/lean_rpc/: base.rs  client.rs  dag.rs  lean_dag.rs  lean_dag_client.rs  lean_server.rs  mod.rs  paperproof.rs
src/lean_rpc/dag/: mod.rs  node.rs  state.rs
src/proxy/: commands.rs  cursor.rs  documents.rs  goals.rs  lake.rs  lsp.rs  mod.rs  service.rs  tactic_finder.rs
src/proxy/ast/: case_splits.rs  definitions.rs  mod.rs  navigation.rs  tactics.rs  tests.rs  util.rs
src/proxy/dag/: from_local.rs  from_paperproof.rs  goto_resolution.rs  mod.rs  node.rs  state.rs  structure.rs
src/proxy/lsp/: cursor.rs  documents.rs  mod.rs  service.rs
src/tui/: app.rs  draw.rs  mod.rs  socket.rs  ui.rs
src/tui/components/: definition_header.rs  diff_text.rs  goal_box.rs  goal_section.rs  goal_state.rs  goal_tree.rs  goal_view.rs  goals_column.rs  header.rs  help_menu.rs  hyp_layer.rs  hyp_section.rs  layout_metrics.rs  mod.rs  proof_steps_sidebar.rs  selection.rs  status_bar.rs  theme.rs  tree_hyp_bar.rs  tree_view.rs
src/tui/components/paperproof/: definition_header.rs  goal_before.rs  goal_section.rs  hyp_layer.rs  hyp_section.rs  mod.rs  proof_steps_sidebar.rs  tactic_row.rs  tree_colors.rs  tree_hyp_bar.rs  tree_view.rs  view.rs
src/tui/modes/: before_after.rs  deduction_tree.rs  goal_tree.rs  mod.rs  open_goal_list.rs  steps_view.rs
src/tui/widgets/: diff_text.rs  goal_before.rs  goal_box.rs  goal_section.rs  goal_tree.rs  goals_column.rs  help_menu.rs  hyp_layer.rs  hyp_section.rs  interactive_widget.rs  layout_metrics.rs  mod.rs  open_goal_list.rs  proof_steps_sidebar.rs  render_helpers.rs  selection.rs  status_bar.rs  step_box.rs  tactic_row.rs  theme.rs  tree_builder.rs  tree_given_bar.rs  tree_hyp_bar.rs  tree_node_box.rs  tree_view.rs  welcome.rs
src/tui/widgets/semantic_tableau/: canvas.rs  given_pane.rs  layout.rs  mod.rs  navigation.rs  proof_pane.rs  state_node.rs  theorem_pane.rs  tree_layout.rs
src/tui_ipc/: broadcaster.rs  command_handler.rs  message.rs  mod.rs  navigator.rs  protocol.rs  proxy_endpoint.rs  server.rs  tui_endpoint.rs
tests/: common.rs  cursor.rs  initialize.rs
