[package]
name = "lean-tui"
version = "0.1.0"
edition = "2021"
description = "Standalone TUI infoview for Lean 4 theorem prover"
license = "MIT"
repository = "https://github.com/wvhulle/lean-tui"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# LSP
async-lsp = { version = "0.2", features = ["forward", "tracing", "tokio"] }
tower-service = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"
