[package]
description = "Standalone TUI infoview for Lean 4 theorem prover"
edition = "2021"
license = "MIT"
name = "lean-tui"
repository = "https://github.com/wvhulle/lean-tui"
version = "0.1.0"


[lints.clippy]
excessive_nesting = { level = "deny", priority = 2 }
missing_errors_doc = { level = "allow", priority = -1 }
nursery = "warn"
pedantic = "deny"

[dependencies]
# Async runtime
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# LSP
async-lsp = { version = "0.2", features = ["forward", "tracing", "tokio"] }
tower-service = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
