[package]
authors = ["Willem Vanhulle <willemvanhulle@protonmail.com>"]
description = "Standalone TUI infoview for Lean 4 theorem prover"
edition = "2021"
keywords = ["lean4", "proof-assistant", "tui", "mathematics"]
license = "MIT"
name = "lean-tui"
repository = "https://codeberg.org/wvhulle/lean-tui"
version = "0.1.0"

[lints.clippy]
absolute_paths = { level = "warn", priority = 2 }
cast_possible_truncation = { level = "allow", priority = 2 }
excessive_nesting = { level = "warn", priority = 2 }
missing_errors_doc = { level = "allow", priority = -1 }
nursery = "warn"
pedantic = "deny"

[dependencies]
# Async runtime
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# LSP
async-lsp = { version = "0.2", features = ["forward", "tracing", "tokio"] }
tower-service = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "6"

# TUI
crossterm = { version = "0.29", features = ["event-stream", "osc52"] }
ratatui = "0.29"
